syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/kenyako/chat-server/pkg/chat_v1;chat_v1";

service ChatAPI {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    string title = 1;
    repeated string usernames = 2;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendRequest {
    int64 chatID = 1;
    string from = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;
}